2004-12-15  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.c (escm_error): Common error function.

	* src/fifo.c, src/filter.c, src/cgimain.c (main): Removed
	variable escm_output.

	* src/escm.h, src/lang.c (parse_lang), src/langconf.c: Removed
	assign field from escm_lang structure.

	* src/escm.c (escm_assign): Removed.

	* src/escm.c (escm_puts): Use escm_puts_in() inside.
	(escm_puts_array, escm_bind_array): Added these functions.

2004-12-14  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/fifo.c: Added but it does not work yet.

2004-12-08  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* doc/config.scm.in: Add @prefix@ and @srcdir@.

2004-12-06  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escmcgi.c (escm_query_string, escm_header): Cut out from escm.c

	* src/filter.c (main): Removde --enable-polyglot option.

	* src/escm.c (escm_puts): Renamed from put_string().

2004-10-25  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.h: Removed id_type member from escm_lang structure.

	* src/Makefile.am (EXTRA_PROGRAMS): Moved aescm.cgi under this
	directive.

2004-10-16  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/cgimain.c: Separated CGI features.

2004-10-15  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.c: Some functions return FALSE instead of aborting if
	an error occurs.

	* src/lang.c: Removed end directive.

	* src/misc.c, src/misc.h, src/cmdline.c, src/cmdline.h: Removed.

	* src/escm.c (escm_error): Moved from misc.c.

	* src/filter.c: Removed CGI features.

2004-10-13  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.c (escm_preproc): Rewrote the parser.

	* src/escm.c, src/filter.c (escm_bind_query_string): Always bind
	the query string to *escm-query-string*.

2004-10-12  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.c (escm_bind_query_string): Escape backslashes.

2004-10-11  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/misc.c, src/misc.h, src/filter.c (cgi_html_header): Replaced
	with escm_header.
